--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="head">
         <div class="nav">
             <div class="logo">
-                <img src="Sweet crumbs.png" class="imgg">
+                <img src="Sweet Crumbs.png" class="imgg">
             </div>
             <div class="right">
                 <div class="upper">
