changed logo name

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
         </div>
         <div class="down">
             <div class="image">
-                <img src="Sweet crumbs.png" class="imgg">
+                <img src="Sweet Crumbs.png" class="imgg">
             </div>
             <div class="first">
                 <b>Menu</b>
