--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Crete+Round:ital@0;1&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100..900;1,100..900&family=TikTok+Sans:opsz,wght@12..36,300..900&display=swap"
         rel="stylesheet">
-    <link rel="icon" href="sweet-crumbs.png" />
+    <link rel="icon" href="./sweet-crumbs.png" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
@@ -23,7 +23,7 @@
     <div class="head">
         <div class="nav">
             <div class="logo">
-                <img src="sweet-crumbs.png" class="imgg">
+                <img src="./sweet-crumbs.png" class="imgg">
             </div>
             <div class="right">
                 <div class="upper">
@@ -220,7 +220,7 @@
         </div>
         <div class="down">
             <div class="image">
-                <img src="sweet-crumbs.png" class="imgg">
+                <img src="./sweet-crumbs.png" class="imgg">
             </div>
             <div class="first">
                 <b>Menu</b>
